--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Stripe Test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<script src="/socket.io/socket.io.js"></script>
-	<!-- <link rel="stylesheet" href="http://summerstyle.github.io/jsonTreeViewer/libs/jsonTree/jsonTree.css">
-	<script src="http://summerstyle.github.io/jsonTreeViewer/libs/jsonTree/jsonTree.js"></script> -->
 </head>
 
 <body>
@@ -22,22 +21,29 @@
 		<hr>
 		<div id='source.created'></div>
 		<div id='source.transaction.created'></div>
-		<div id='source.chargeable'></div>
+		<div id='source.chargeable'></div > 
+		<div id='charge.succeeded'></div > 
+		<button id="source.chargenow" style="display:none" onclick="chargeSource()">Charge Now</button>
 	</div>
 </body>
 <script>
 	// connect to socket
 	const socket = io();
 	
-	socket.on('source.transaction.created', (body) => {
-		console.log('transaction created received', body);
-		const message = `${body.data.data.object.sepa_credit_transfer.sender_name} transferred money from ${body.data.data.object.sepa_credit_transfer.sender_iban} `;
+	socket.on('source.transaction.created', (payload) => {
+		console.log('transaction created received', payload);
+		const message = `${payload.sepa_credit_transfer.sender_name} transferred €${payload.amount / 100} from ${payload.sepa_credit_transfer.sender_iban} `;
 		document.getElementById('source.transaction.created').innerHTML = message;
 	});
-	socket.on('source.chargeable', (body) => {
-		console.log('source chargeable received', body);
-		const message = `${body.data.data.object.receiver.amount_received/100}€ received from ${body.data.data.object.sepa_credit_transfer.bank_name} `;
-		document.getElementById('source.chargeable').innerHTML = message;
+	socket.on('source.chargeable', (payload) => {
+		console.log('source chargeable received', payload);
+		document.getElementById('source.chargeable').innerHTML = 'Source is now chargeable';
+		document.getElementById('source.chargenow').style.display = 'block';
+	});
+	socket.on('charge.succeeded', (payload) => {
+		console.log('source chargeable received', payload);
+		document.getElementById('charge.succeeded').innerHTML = 'All DONE !!'
+		document.getElementById('source.chargenow').style.display = 'none';
 	});
 	function api(endpoint, method, data) {
 		return new Promise(resolve => {
@@ -57,9 +63,21 @@
 		const email = document.getElementById('owner.email').value;
 		if (name, email) {
 			const source = await api('/stripe', 'POST', {name, email} );
-			document.getElementById('source.created').innerHTML = `New Source created: ${source.iban}`
+			localStorage.setItem('source', JSON.stringify(source));
+			document.getElementById('source.created').innerHTML = `New Source created: ${source.iban} and attached with Customer: ${source.customer}`
 		}
 
+	}
+	async function chargeSource() {
+		let source = localStorage.getItem('source');
+		try {
+			source = JSON.parse(source);
+			const response = await api('/stripe/charge', 'POST', source);
+			console.log('response', response);
+			
+		} catch (error) {
+			
+		}
 	}
 
 </script>
